redid the query par to make sure the size on smaller screens shows properly by changin the container and taking out the iframe from the contentframe div.

--- a/styles.css
+++ b/styles.css
@@ -46,25 +46,20 @@ html {
 }
 
 #contentframe {
-  width: 500px;
-  position: absolute;
-  bottom: 100px;
-  right: 25px;
+  position:absolute;
+  right: 35px;
+  bottom: 30px;
   text-align: center;
-  background-color: black;
-  background-image: linear-gradient(62deg,
-      gray 0%,
-      black 100%);
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: #00beef;
-  box-sizing: border-box;
-  padding: 2px;
-  box-shadow: 5px 10px#000;
 }
 
 iframe {
   width: 460px;
   height: 320px;
+  position: absolute;
+  right: 25px;
+  bottom: 100px;
 }
 
 .text {
@@ -108,4 +103,13 @@ iframe {
 #contentframe a:hover {
   color: #00beef;
   text-decoration: underline;
+}
+@media  (max-width: 720px) {
+  iframe {
+    width: 250px;
+    height: 200px;
+  }
+  #contentframe {
+    font-size: 1.5rem;
+  }
 }
